[tool.poetry]
name = "robotframework-tricentis-obstacle-course"
version = "0.1.0"
description = ""
authors = ["Many Kasiriha <many.kasiriha@dbschenker.com>"]

[tool.poetry.dependencies]
python = "^3.10"
robotframework-browser = "^13.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
